--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
         let quantity = 1;
         const pricePerTree = 35;
         
-        // Google Form URL - CORRECT URL FROM YOUR FORM SOURCE
-        const GOOGLE_FORM_URL = 'https://docs.google.com/forms/u/0/d/e/1FAIpQLScIGSrCx53X3yTJIrydkwQL8AkFHOMRkrwo2c5FtNz2seK9SQ/formResponse';
+        // Google Form URL - USING YOUR CORRECT FORM URL
+        const GOOGLE_FORM_URL = 'https://docs.google.com/forms/d/e/1FAIpQLScIGSrCx53X3yTJIrydkwQL8AkFHOMRkrwo2c5FtNz2seK9SQ/formResponse';
         
         // Functions
         function updatePrice() {
