--- a/index.html
+++ b/index.html
@@ -382,9 +382,9 @@
         const GOOGLE_FORM_URL = 'https://docs.google.com/forms/d/e/1FAIpQLScIGSrCx53X3yTJIrydkwQL8AkFHOMRkrwo2c5FtNz2seK9SQ/formResponse';
         
         // EmailJS configuration - YOU NEED TO SET THESE UP
-        const EMAILJS_SERVICE_ID = 'your_service_id'; // Replace with your EmailJS service ID
-        const EMAILJS_TEMPLATE_ID = 'your_template_id'; // Replace with your EmailJS template ID  
-        const EMAILJS_PUBLIC_KEY = 'your_public_key'; // Replace with your EmailJS public key
+        const EMAILJS_SERVICE_ID = 'service_gsk22mt'; // Replace with your EmailJS service ID
+        const EMAILJS_TEMPLATE_ID = 'template_398larb'; // Replace with your EmailJS template ID  
+        const EMAILJS_PUBLIC_KEY = '3ULrV9IguZAmHnrR9'; // Replace with your EmailJS public key
         
         // Functions
         function updatePrice() {
