--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://i.ibb.co/VYQpNmC/logo.png" alt="RT2 Logo" class="logo">
+        <img src="https://i.ibb.co/4RYgfdSd/cropped-logortbround.png" alt="RT2 Logo" class="logo">
         <h1>Kerstboom Bestellen</h1>
         <p class="subtitle">Bestel je kerstboom van RT2 hier</p>
         
