--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
         const pricePerTree = 55;
         
         // Your Google Apps Script Web App URL - REPLACE WITH YOUR DEPLOYED WEB APP URL
-        const GOOGLE_SCRIPT_URL = 'YOUR_DEPLOYED_WEB_APP_URL_HERE';
+        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxGu4SyMG_jGi3oAAGgvPxypxuJcB0APPKoJ93Yqs5PZ0odd1hW7pSnxV7tZzLo5X5Svg/exec';
         
         // Language switching function
         function switchLanguage(lang) {
