--- a/index.html
+++ b/index.html
@@ -666,6 +666,7 @@
                 // Call Google Apps Script to create Mollie payment
                 const response = await fetch(GOOGLE_SCRIPT_URL, {
                     method: 'POST',
+                    mode: 'no-cors',
                     headers: {
                         'Content-Type': 'application/json',
                     },
