--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
         // REPLACE THIS WITH YOUR DEPLOYED GOOGLE APPS SCRIPT URL
         const GOOGLE_APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwZU-_b9GPQcXi0umc_fV6OcMKurphS1UePm0v04Vr90kClj3OIpMMAjkhOKlS9noHoxw/exec';
         
-        // Translations
+        // Translation
         const translations = {
             nl: {
                 title: "Kerstboom Bestellen",
