--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
         // REPLACE THIS WITH YOUR DEPLOYED GOOGLE APPS SCRIPT URL
         const GOOGLE_APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzLhLi8QTQj_fwmcISlmgakiiU9km4PUggEUzckoUpxzTJcS8QNBzpsRPtxiY8BW577xA/exec';
         
-        // Translations
+        // Translation
         const translations = {
             nl: {
                 title: "Kerstboom Bestellen",
