--- a/success.html
+++ b/success.html
@@ -164,7 +164,7 @@
             nl: {
                 success_title: 'Betaling Geslaagd!',
                 success_message: 'Hartelijk dank voor je bestelling! Je betaling is succesvol verwerkt.',
-                email_message: 'Je ontvangt binnen enkele minuten een bevestigingsmail met alle details.',
+                email_message: 'Je ontvangt binnen enkele minuten een bevestigingsmail met alle details. Controleer u spam folder!',
                 order_details: 'Bestelling Details',
                 order_number: 'Bestelnummer:',
                 name: 'Naam:',
@@ -180,7 +180,7 @@
             fr: {
                 success_title: 'Paiement Réussi!',
                 success_message: 'Merci beaucoup pour votre commande! Votre paiement a été traité avec succès.',
-                email_message: 'Vous recevrez un email de confirmation avec tous les détails dans quelques minutes.',
+                email_message: 'Vous recevrez un email de confirmation avec tous les détails dans quelques minutes. Vérifiez votre spam!',
                 order_details: 'Détails de la commande',
                 order_number: 'Numéro de commande:',
                 name: 'Nom:',
