--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
             nl: {
                 title: "Kerstboom Bestellen",
                 subtitle: "Bestel je kerstboom van RT2 hier",
-                name_label: "Naam *",
+                name_label: "Naam + voornaam *",
                 email_label: "Email *",
                 phone_label: "Telefoonnummer *",
                 invoice_label: "📄 Ik wil een factuur ontvangen",
@@ -504,7 +504,7 @@
             fr: {
                 title: "Commander Sapin de Noël",
                 subtitle: "Commandez votre sapin de Noël RT2 ici",
-                name_label: "Nom *",
+                name_label: "Nom + prénom *",
                 email_label: "Email *",
                 phone_label: "Numéro de téléphone *",
                 invoice_label: "📄 Je souhaite recevoir une facture",
