--- a/index.html
+++ b/index.html
@@ -248,13 +248,13 @@
             <div class="contact-item">
                 <span class="icon">📧</span>
                 <span data-text="email_label">Email:</span>
-                <a href="mailto:info@rt2.be">info@rt2.be</a>
+                <a href="mailto:d_thys@hotmail.com">d_thys@hotmail.com</a>
             </div>
             
             <div class="contact-item">
                 <span class="icon">📱</span>
                 <span data-text="phone_label">Telefoon:</span>
-                <a href="tel:+32123456789" data-text="phone_number">+32 123 456 789</a>
+                <a href="tel:+32474048989" data-text="phone_number">++32474048989</a>
             </div>
         </div>
     </div>
