--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 contact_intro: "Wilt u toch een kerstboom bestellen? Neem gerust contact met ons op:",
                 email_label: "Email:",
                 phone_label: "Telefoon:",
-                phone_number: "+32 123 456 789"
+                phone_number: "+32474048989"
             },
             fr: {
                 title: "Commander Sapin de Noël",
@@ -282,7 +282,7 @@
                 contact_intro: "Vous souhaitez quand même commander un sapin de Noël? N'hésitez pas à nous contacter:",
                 email_label: "Email:",
                 phone_label: "Téléphone:",
-                phone_number: "+32 123 456 789"
+                phone_number: "+32474048989"
             }
         };
 
